--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@reach/router": "^1.3.4",
     "apollo-client": "^2.6.10",
     "babel-plugin-styled-components": "^1.11.1",
+    "fontsource-roboto": "^4.0.0",
     "framer-motion": "^2.9.4",
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.20",
@@ -25,6 +26,7 @@
     "html-react-parser": "^0.14.0",
     "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
+    "npm-font-open-sans": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.0.2",
