--- a/package.json
+++ b/package.json
@@ -7,39 +7,42 @@
   "dependencies": {
     "@gatsbyjs/reach-router": "^1.3.6",
     "@reach/router": "^1.3.4",
-    "babel-plugin-styled-components": "^1.11.1",
+    "babel-plugin-styled-components": "^1.13.2",
     "fontsource-roboto": "^4.0.0",
-    "framer-motion": "^2.9.4",
-    "gatsby": "^2.24.67",
-    "gatsby-image": "^2.4.20",
+    "framer-motion": "^4.1.17",
+    "gatsby": "^3.10.1",
+    "gatsby-image": "^3.10.0",
     "gatsby-link": "^3.4.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-remove-trailing-slashes": "^2.4.0",
-    "gatsby-plugin-sharp": "^2.6.38",
+    "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-offline": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-react-i18next": "^1.1.1",
+    "gatsby-plugin-remove-trailing-slashes": "^3.10.0",
+    "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-react-router-scroll": "^4.4.0",
-    "gatsby-source-filesystem": "^2.3.32",
-    "gatsby-source-sanity": "^6.0.4",
-    "gatsby-transformer-sharp": "^2.5.16",
-    "html-react-parser": "^0.14.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-source-sanity": "^7.0.7",
+    "gatsby-transformer-sharp": "^3.10.0",
+    "html-react-parser": "^1.2.7",
+    "i18next": "^20.3.4",
     "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-alice-carousel": "^2.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.13.0",
-    "react-intersection-observer": "^8.29.1",
+    "react-i18next": "^11.11.3",
+    "react-intersection-observer": "^8.32.0",
     "react-lazy-load-image-component": "^1.5.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.3.2"
   },
   "keywords": [
     "gatsby"
